--- a/mars/src/main/res/values/strings.xml
+++ b/mars/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Mars</string>
+
+    <string-array name="groups">
+        <item>RAF</item>
+        <item>Army</item>
+    </string-array>
 </resources>
