Added logos, fixed email issue and started experimenting with themes

--- a/mars/src/main/res/values/strings.xml
+++ b/mars/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mars</string>
+    <string name="app_name">RS CCF</string>
 
     <string-array name="groups">
         <item>RAF</item>
