Cleaned up some files and added strings to xml

--- a/janus/src/main/res/values/strings.xml
+++ b/janus/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">Janus</string>
+    <string name="date">Date</string>
+    <string name="nco">NCO</string>
+    <string name="officer">Officer</string>
+    <string name="uniforn">Uniforn</string>
+    <string name="notes">Notes</string>
+    <string name="upload">Upload</string>
 
     <string-array name="groups">
         <item>RAF Recruits</item>
